# AIGuardian

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.example.yaml
config/blocklists/: malware.txt
examples/: README.md  evaluate.py  fasttext_compat.py  generate_sample_data.py  predict.py  train.py
scripts/: train_fasttext.py
src/pihole_blocker/: __init__.py  config.py  main.py
src/pihole_blocker/api/: app.py
src/pihole_blocker/collectors/: adguard.py  base.py  pihole.py
src/pihole_blocker/db/: repository.py  schema.sql
src/pihole_blocker/llm/: summarizer.py
src/pihole_blocker/pipeline/: classifier.py  heuristics.py  orchestrator.py
systemd/: pihole-blocker.service
tests/: test_heuristics.py
