[project]
name = "pihole-blocker"
version = "0.1.0"
description = "Filtro de red local-first con IA escalonada para Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
ml = [
    "fasttext-wheel>=0.9.2",
    "onnxruntime>=1.20.0",
    "numpy>=2.0.0",
]
llm = [
    "llama-cpp-python>=0.3.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
pihole-blocker = "pihole_blocker.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
